correct order spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,3 +30,6 @@ body {
 #total-cost {
   display:inline;
 }
+#order p {
+  line-height: 30%;
+}
